--- a/src/User/User.css
+++ b/src/User/User.css
@@ -3,7 +3,7 @@ html {
   color: rgb(255, 255, 255);
   font-family: "Heebo", sans-serif;
   /* font-family: "Source Sans Pro", sans-serif; */
-  background-color: #e1f2fa;
+  background-color: #e7f3f0;
 }
 .front-side,
 .back-side {
