--- a/src/User/User.css
+++ b/src/User/User.css
@@ -1,9 +1,9 @@
 html {
   font-size: 17px;
-  color: rgb(255, 255, 255);
+  color: #201717dc;
   font-family: "Heebo", sans-serif;
   /* font-family: "Source Sans Pro", sans-serif; */
-  background-color: #e7f3f0;
+  background-color: #f1f7f7;
 }
 .front-side,
 .back-side {
@@ -15,8 +15,8 @@ html {
   position: relative;
   margin: 20px auto;
   overflow: hidden;
-  box-shadow: 2px 5px 15px 0px #17161694;
-  background-color: #122529;
+  box-shadow: 2px 5px 15px 0px #33313194;
+  background-color: #00000281;
 }
 .color-grid {
   display: grid;
@@ -28,21 +28,21 @@ html {
   transform: rotate(-45deg);
 }
 .black {
-  background-color: #343536;
+  background-color: #c5e7e9;
   grid-column: 2 / span 2;
   grid-row: 1 / span 3;
 }
 .red1 {
-  background-color: #e45e4f;
+  background-color: #e7def7;
   grid-row: 2 / span 5;
 }
 .red2 {
-  background-color: #e45e4f;
+  background-color: #eb90b3;
   grid-column: 2 / span 2;
   grid-row: 4/7;
 }
 .green {
-  background-color: #007e67;
+  background-color: #a7d9fa;
   grid-column: 2/4;
   grid-row: 7/9;
 }
